[package]
name = "dragon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio={ version= '1', features=["full"]}
axum={ version = "=0.8.1", features = ["macros"] }
serde={ version="^1.0.218", features=["derive"] }
tower-http={ version="^0.6.2", features=["fs"] }
tower-cookies="^0.11"
solana-client="^2.2.6"
solana-sdk="^2.2.2"
helius="0.2.5"
derive_more = { version = "2", features = ["from"] }

