[package]
name = "dragon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio={ version= '1', features=["full"]}
axum={ version = "=0.8.1", features = ["macros"] }
serde={ version="^1.0.218", features=["derive"] }
tower-http={ version="^0.6.2", features=["fs"] }
tower-cookies="^0.11"
derive_more = { version = "2", features = ["from"] }
reqwest="=0.11.27"
serde_json="^1"
sqlx={ version="^0.8", features=["runtime-tokio", "postgres", "time", "uuid"] }
validator = { version = "0.16", features = ["derive"] }
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-client = "2.2.1"
solana-keypair = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-signature = "2.2.1"
solana-instruction = "2.1.1"
solana-transaction-status-client-types = "2.1.1" 

[dev-dependencies]
anyhow="^1" 